// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button title renders correctly 1`] = `
<div
  className="button"
>
  Button
</div>
`;

exports[`Button title renders correctly 2`] = `
<div
  className="button"
>
  subscribe
</div>
`;
